--- a/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
+++ b/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
@@ -89,6 +89,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\GenericDeleteRed16.png" />
     <Content Include="Resources\open.gif" />
     <Content Include="Resources\save.bmp" />
     <Content Include="Resources\saveas.bmp" />
