--- a/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
+++ b/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
@@ -89,6 +89,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\docBlack 2.jpg" />
+    <Content Include="Resources\docBlack3.jpg" />
+    <Content Include="Resources\fileIcon.jpg" />
     <Content Include="Resources\GenericDeleteRed16.png" />
     <Content Include="Resources\open.gif" />
     <Content Include="Resources\save.bmp" />
