Added  button and combobox to uc_responsibleParty for adding contacts from db

--- a/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
+++ b/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
@@ -335,6 +335,7 @@
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\Contact_Information.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\DistributionLiability.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
