Fixed Dans issue with the paging on Responsible Party on load of metadata file

--- a/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
+++ b/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
@@ -329,6 +329,7 @@
   <ItemGroup>
     <Content Include="Eme4xSystemFiles\EMEdb\BoundingBox.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\Citation.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
