Added sourceTable and sourceField to emeSetting Wired up us_distribution to read, enabled hover tips, and enabled validation Added extent(bounding box) section to emeLt, wired up controls Wired up keywords list through pageController class.

--- a/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
+++ b/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
@@ -347,6 +347,7 @@
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\emeGUI.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\KeywordsEPA.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -359,6 +360,7 @@
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\KeywordsUser.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\MDtemplate.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
