wired up ProgramCode for CI_Responsible Party

--- a/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
+++ b/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
@@ -373,6 +373,9 @@
     <Content Include="Eme4xSystemFiles\EMEdb\OnlineLinkage.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Eme4xSystemFiles\EMEdb\ProgramCode.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\Publisher.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
