Work on save and SaveAs methods.  Minor fixes to IsoNodes for saving out xml content

--- a/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
+++ b/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EmeDatabase.Designer.cs">
       <DependentUpon>EmeDatabase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Events\SaveEvent.cs" />
     <Compile Include="isoNodes.cs" />
     <Compile Include="PageController.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
