Created Deployment Package and Repointed EME system tables to proper User App Data

--- a/EME4xWinFormSolution/ArcCatalogAddinEme4Tools/ArcCatalogAddinEme4Tools.csproj
+++ b/EME4xWinFormSolution/ArcCatalogAddinEme4Tools/ArcCatalogAddinEme4Tools.csproj
@@ -136,327 +136,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\BoundingBox.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\Citation.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\Contact_Information.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\DistributionLiability.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\emeGUI.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\emeSettings.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\KeywordsEPA.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\KeywordsISO.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\KeywordsPlace.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\KeywordsUser.xml">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\MDtemplate.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\MItemplate.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\OnlineLinkage.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\ProgramCode.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\Publisher.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\EMEdb\xMItemplate.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\gml_3_2_1-ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\SchematronConstraints.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\SQC-coverage.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\sqc050517_gml.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gsr\ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gss\ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gts\ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\Codelist\gmxCodelists.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\Codelist\ML_gmxCodelists.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\Codelist\tcCodelists.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\crs\gmxCrs.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\crs\ML_gmxCrs.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\example\fr-fr.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\extensions\MD_MetadataExtensionInformation.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\ReadMe.txt" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\uom\gmxUom.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\resources\uom\ML_gmxUom.xml" />
-    <Content Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\xlink\version.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema.xsd">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gco\basicTypes.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gco\gco.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gco\gcoBase.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gfc\featureCataloging.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gfc\gfc.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\applicationSchema.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\citation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\constraints.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\content.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\dataQuality.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\distribution.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\extent.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\freeText.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\gmd.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\identification.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\maintenance.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\metadataApplication.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\metadataEntity.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\metadataExtension.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\portrayalCatalogue.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\referenceSystem.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmd\spatialRepresentation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmi\acquisitionInformation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmi\contentInformation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmi\dataQualityInformation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmi\gmi.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmi\metadataEntitySet.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmi\spatialRepresentationInformation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\basicTypes.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\coordinateOperations.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\coordinateReferenceSystems.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\coordinateSystems.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\coverage.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\datums.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\defaultStyle.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\deprecatedTypes.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\dictionary.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\direction.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\dynamicFeature.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\feature.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\geometryAggregates.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\geometryBasic0d1d.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\geometryBasic2d.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\geometryComplexes.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\geometryPrimitives.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\gml.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\gmlBase.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\grids.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\measures.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\observation.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\referenceSystems.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\temporal.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\temporalReferenceSystems.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\temporalTopology.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\topology.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\units.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gml\valueObjects.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\catalogues.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\codelistItem.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\crsItem.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\extendedTypes.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\gmx.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\gmxUsage.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gmx\uomItem.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gsr\gsr.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gsr\spatialReferencing.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gss\geometry.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gss\gss.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gts\gts.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\gts\temporalObjects.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\mf\cargene.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\mf\coverageMeasures.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\mf\coverageType.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\mf\measureType.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\mf\metafor.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\mf\mfExtensions.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\srv\serviceMetadata.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\srv\serviceModel.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\srv\srv.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="bin\Debug\Eme4xSystemFiles\MetadataSchema\NOAA_19115_2\schema\xlink\xlinks.xsd">
-      <SubType>Designer</SubType>
-    </None>
+    <Folder Include="bin\Debug\" />
   </ItemGroup>
   <PropertyGroup>
     <ZipFileExtension>esriAddIn</ZipFileExtension>
