--- a/EME4xWinFormSolution/ArcCatalogAddinEme4Tools/ArcCatalogAddinEme4Tools.csproj
+++ b/EME4xWinFormSolution/ArcCatalogAddinEme4Tools/ArcCatalogAddinEme4Tools.csproj
@@ -85,6 +85,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Config.esriaddinx</DependentUpon>
     </Compile>
+    <Compile Include="EditIsoMetadata.cs" />
     <Compile Include="ExportMetadata.cs" />
     <Compile Include="ImportMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -99,8 +100,7 @@
     <AddInContent Include="Images\ArcCatalogAddinEme4Tools.png" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditIsoMetadata.cs" />
-    <AddInContent Include="Images\Button1.png" />
+    <Compile Include="EditIsoMetadata2.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ESRI.ArcGIS.ArcCatalog">
@@ -140,6 +140,9 @@
     <Folder Include="bin\Debug\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\Button1.png" />
+    <Content Include="Images\EditIsoMetadata.png" />
+    <AddInContent Include="Images\EditIsoMetadata_1.png" />
     <Content Include="Images\EmeIconv2.PNG" />
     <Content Include="Images\export.png" />
     <AddInContent Include="Images\ExportMetadata.png" />
