--- a/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
+++ b/EME4xWinFormSolution/EmeLibrary/EmeFormLibrary.csproj
@@ -95,6 +95,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="uc_distribution.resx">
       <DependentUpon>uc_distribution.cs</DependentUpon>
