general form stability issues.  Provided template record to load defaults and button to clear all values.  Updated Contact Info Table.

--- a/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
+++ b/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
@@ -367,6 +367,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Eme4xSystemFiles\EMEdb\ISO19115MD_GenericMetadataTemplate.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\KeywordsEPA.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
