--- a/EME4xWinFormSolution/EME4xWinForm/app.config
+++ b/EME4xWinFormSolution/EME4xWinForm/app.config
@@ -10,6 +10,9 @@
             <setting name="EmeSystemFilesPath" serializeAs="String">
                 <value>FullyQualifiedPathNameForEMESystemFiles</value>
             </setting>
+            <setting name="HHPath" serializeAs="String">
+                <value>c:\windows</value>
+            </setting>
         </EME4xWinForm.Properties.Settings>
     </userSettings>
 </configuration>
