Fixed binding issue for system or records.  Re-factored code to handle drop down list binding to databases.

--- a/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
+++ b/EME4xWinFormSolution/EME4xWinForm/EME4xWinForm.csproj
@@ -410,6 +410,9 @@
     <Content Include="Eme4xSystemFiles\EMEdb\Publisher.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Eme4xSystemFiles\EMEdb\SystemofRecords.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Eme4xSystemFiles\EMEdb\xMItemplate.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
